# retain-pdf

./: .gitignore  README.md  VERSION  pyproject.toml
.github/scripts/: smoke_frontend_status.sh  validate_desktop_bundle.py
.github/workflows/: release-desktop.yml  translate-sample-pdf.yml  translation-replay.yml
Fast_API/: README.md  executor.py  main.py  models.py
backend/rust_api/: api.md
backend/scripts/: README.md
desktop/: main.js  package-lock.json  package.json  preload.js  requirements-desktop-macos.txt
desktop/scripts/: prepare-app.mjs
doc/: README.md  api-endpoints.md  api-overview.md  frontend-optimization-notes.md  frontend_status_smoke.md  python_dependency_source_of_truth.md  python_pipeline_dependencies.json  python_pipeline_dependencies.md
doc/rust_api/: 05-联调与排错.md
docker/: Dockerfile.app  Dockerfile.web  entrypoint-app.sh  entrypoint-web.sh  nginx-mjs.types.conf  nginx.conf.template  requirements-app.txt  requirements-test.txt
docker/delivery/: README.md
docs/: README.output.md  README.quickstart.md
en2zh/: JSON.md
front/: HowTo.md  README.md  app.js  index.html  runtime-config.js  styles.css
frontend/: package.json  runtime-config.js  runtime-config.local.example.js  styles.css
frontend/scripts/: frontend-status-smoke.mjs  retain-pdf-frontend.service  serve_static.py
rust_api/: API_SPEC.md  Cargo.toml  api.md  frontend_request_example.md
rust_api/src/: config.rs  db.rs  job_runner.rs  main.rs  (+1 more)
scripts/: README.md  README_CN.md  build_book.py  build_page.py  run_book.py  run_case.py  translate_book.py  translate_page.py
(+214 files in other folders)
